use toolbar instead of action bar, add edit fab to memorea info fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="question">Question</string>
     <string name="answer">Answer</string>
     <string name="hint">Hint</string>
+    <string name="hint_optional">Hint (optional)</string>
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
     <string name="add_memorea_title">Add Memorea</string>
