--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
     <string name="add_memorea_title">Add Memorea</string>
+    <string name="edit_memorea_title">Edit Memorea</string>
 </resources>
