--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,8 @@
     <string name="prefence_file_key">com.getmemorease.memorease.memoreas_list</string>
     <string name="wrong">Wrong</string>
     <string name="got_it">Got it</string>
+    <string name="alert_dialog_ok">OK</string>
+    <string name="completed">Completed Memorea!</string>
+    <string name="completed_message">You completed all the times for this memorea! Congratulations!</string>
+    <string name="memorization_ready">Memorization ready!</string>
 </resources>
