required fields in add dialog have to be filled out, remove hint when not present

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="completed">Completed Memorea!</string>
     <string name="completed_message">You completed all the times for this memorea! Congratulations!</string>
     <string name="memorization_ready">Memorization ready!</string>
+    <string name="required_fields_not_set">Required fields not set!</string>
+    <string name="required_fields_not_set_message">Please set the title, question, and answer fields</string>
 </resources>
