--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="got_it">Got it</string>
     <string name="alert_dialog_ok">OK</string>
     <string name="completed">Completed Memorea!</string>
-    <string name="completed_message">You completed all the times for this memorea! Congratulations!</string>
+    <string name="completed_message">You completed all the times for the %s memorea! Congratulations!</string>
     <string name="memorization_ready">Memorization ready!</string>
     <string name="required_fields_not_set">Required fields not set!</string>
     <string name="required_fields_not_set_message">Please set the title, question, and answer fields</string>
