--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,10 +5,10 @@
     <string name="nothing_to_memorize">Nothing to memorize!</string>
     <string name="add">Add</string>
     <string name="next_memorization_in">Next memorization in</string>
-    <string name="title">Title</string>
-    <string name="question">Question</string>
-    <string name="answer">Answer</string>
-    <string name="hint">Hint</string>
+    <string name="mTitle">Title</string>
+    <string name="mQuestion">Question</string>
+    <string name="mAnswer">Answer</string>
+    <string name="mHint">Hint</string>
     <string name="hint_optional">Hint (optional)</string>
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
@@ -25,8 +25,11 @@
     <string name="completed_message">You completed all the times for the %s memorea! Congratulations!</string>
     <string name="memorization_ready">Memorization ready!</string>
     <string name="required_fields_not_set">Required fields not set!</string>
-    <string name="required_fields_not_set_message">Please set the title, question, and answer fields</string>
+    <string name="required_fields_not_set_message">Please set the mTitle, mQuestion, and mAnswer fields</string>
     <string name="title_activity_memorea_info">MemoreaInfoActivity</string>
     <string name="no_memoreas_set">No memoreas set!</string>
     <string name="add_a_memorea">Add a memorea</string>
+    <string name="question_label">Question:&#160;</string>
+    <string name="answer_label">Answer:&#160;</string>
+    <string name="hint_label">Hint:&#160;</string>
 </resources>
