--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="title_activity_memorize_screen">MemorizeScreenActivity</string>
     <string name="give_hint">Hint</string>
     <string name="show_answer">Answer</string>
-    <string name="prefence_file_key">com.getmemorease.memorease.memoreas_list</string>
+    <string name="prefence_file_key">com.tarian.memorease.memoreas_list</string>
     <string name="wrong">Wrong</string>
     <string name="got_it">Got it</string>
     <string name="alert_dialog_ok">OK</string>
