--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="question_label">Question:&#160;</string>
     <string name="answer_label">Answer:&#160;</string>
     <string name="hint_label">Hint:&#160;</string>
+    <string name="title_label">Title:&#160;</string>
 </resources>
