put strings into strings.xml or static fields

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,10 +5,10 @@
     <string name="nothing_to_memorize">Nothing to memorize!</string>
     <string name="add">Add</string>
     <string name="next_memorization_in">Next memorization in</string>
-    <string name="mTitle">Title</string>
-    <string name="mQuestion">Question</string>
-    <string name="mAnswer">Answer</string>
-    <string name="mHint">Hint</string>
+    <string name="title">Title</string>
+    <string name="question">Question</string>
+    <string name="answer">Answer</string>
+    <string name="hint">Hint</string>
     <string name="hint_optional">Hint (optional)</string>
     <string name="save">Save</string>
     <string name="cancel">Cancel</string>
@@ -21,16 +21,25 @@
     <string name="wrong">Wrong</string>
     <string name="got_it">Got it</string>
     <string name="alert_dialog_ok">OK</string>
-    <string name="completed">Completed Memorea!</string>
+    <string name="completed_memorea">Completed Memorea!</string>
     <string name="completed_message">You completed all the times for the %s memorea! Congratulations!</string>
     <string name="memorization_ready">Memorization ready!</string>
     <string name="required_fields_not_set">Required fields not set!</string>
     <string name="required_fields_not_set_message">Please set the mTitle, mQuestion, and mAnswer fields</string>
     <string name="title_activity_memorea_info">MemoreaInfoActivity</string>
-    <string name="no_memoreas_set">No memoreas set!</string>
+    <string name="no_memoreas_set">No memoreas!</string>
     <string name="add_a_memorea">Add a memorea</string>
     <string name="question_label">Question:&#160;</string>
     <string name="answer_label">Answer:&#160;</string>
     <string name="hint_label">Hint:&#160;</string>
     <string name="title_label">Title:&#160;</string>
+    <string name="notification_multiple_ready">Multiple notifications ready</string>
+    <string name="notification_single_ready">%s memorea is ready for memorization</string>
+    <string name="snackbar_deleted_message">Deleted the %s Memorea</string>
+    <string name="undo">Undo</string>
+    <string name="completed">Completed!</string>
+    <string name="month_unit">month</string>
+    <string name="day_unit">day</string>
+    <string name="hour_unit">hour</string>
+    <string name="minute_unit">minute</string>
 </resources>
